Fix jwt timeout error